--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
             </string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="title_activity_profile_new_actvity">ProfileNewActvity</string>
+
+    <string name="create_new_account"><b><u>Create New Account</u></b></string>
+
 </resources>
