--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="view_pager_content_description">ViewPager</string>
+    <string name="Log_In"><b><u>Log In</u></b></string>
 
     <string name="create_new_account"><b><u>Create New Account</u></b></string>
     <string name="goto_login"><b><u>Go to Login</u></b></string>
