Adding Comments, Not Working Fully but good enough

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
 
     <string name="create_new_account"><b><u>Create New Account</u></b></string>
     <string name="goto_login"><b><u>Go to Login</u></b></string>
+    View More
+    <string name="viewmorecomments"><u>View More</u></string>
+
     <string name="create_new_account_organ"><b><u>Create New Organization Account</u></b></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
